compiler/testData/diagnostics/tests/multiplatform/hmpp/kt-55570.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
// MODULE: common

// MODULE: main()()(common)
actual class <!ACTUAL_WITHOUT_EXPECT!>A<!>
